manifests/synapse/cors.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: cors
  namespace: synapse
spec:
  headers:
    accessControlAllowMethods:
      - "*"
    accessControlAllowHeaders:
      - "*"
    accessControlAllowOriginList:
      - "*"
