manifests/synapse/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matrix-synapse
  labels:
    app.kubernetes.io/component: synapse
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: synapse
  template:
    metadata:
      labels:
        app.kubernetes.io/component: synapse
    spec:
      containers:
        - name: synapse
          image: matrixdotorg/synapse
          args:
            - run
            - -m
            - synapse.app.homeserver
            - -c
            - /data/config/server/homeserver.yaml
            - -c
            - /data/config/secret/config.yaml
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8008
            - name: metrics
              containerPort: 9090
          livenessProbe:
            httpGet:
              path: /health
              port: http
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /health
              port: http
            timeoutSeconds: 5
          volumeMounts:
            - name: config
              mountPath: /data/config/server
            - name: secrets
              mountPath: /data/config/secret
            - name: signingkey
              mountPath: /data/keys
            - name: media
              mountPath: /data/media
            - name: appservices
              mountPath: /data/appservices
            - name: shared-secret-authenticator
              mountPath: /usr/local/lib/python3.11/site-packages/shared_secret_authenticator.py
              subPath: shared_secret_authenticator.py
          resources:
            limits:
              memory: 4Gi
            requests:
              cpu: 1000m
              memory: 1Gi
        - name: sliding-sync
          image: ghcr.io/matrix-org/sliding-sync
          ports:
            - name: slidingsync
              containerPort: 8009
            - name: ss-metrics
              containerPort: 2112
          resources:
            limits:
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 1Gi
        - name: well-known
          image: firstofth300/matrix-federation:latest
          imagePullPolicy: Always
          ports:
            - name: well-known
              containerPort: 80
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 10Mi
      volumes:
        - name: config
          configMap:
            name: matrix-synapse
        - name: secrets
          secret:
            secretName: matrix-synapse
        - name: signingkey
          secret:
            secretName: "matrix-synapse-signingkey"
            items:
              - key: "signing.key"
                path: signing.key
        - name: media
          persistentVolumeClaim:
            claimName: media
        - name: appservices
          secret:
            secretName: appservice-registrations
        - name: shared-secret-authenticator
          configMap:
            name: shared-secret-authenticator
            items:
              - key: shared_secret_authenticator.py
                path: shared_secret_authenticator.py
