manifests/synapse/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: matrix-synapse
  labels:
    app.kubernetes.io/component: synapse
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8008
      targetPort: http
    - name: slidingsync
      port: 8009
      targetPort: slidingsync
    - name: well-known
      port: 8010
      targetPort: well-known
  selector:
    app.kubernetes.io/component: synapse
