manifests/synapse/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: synapse-cors
spec:
  headers:
    accessControlAllowMethods:
      - "*"
    accessControlAllowHeaders: 
      - "*"
    accessControlAllowOriginList:
      - "*"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matrix-synapse
  labels:
    app.kubernetes.io/name: matrix-synapse
    app.kubernetes.io/instance: matrix-synapse
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: synapse-synapse-cors@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
    - hosts:
        - seymour.family
        - matrix.seymour.family
      secretName: synapse-tls
  rules:
    - host: seymour.family
      http:
        paths:
          - path: "/"
            backend:
              service:
                name: matrix-synapse
                port:
                  name: well-known
            pathType: Prefix
    - host: matrix.seymour.family
      http:
        paths:
          - path: /{path:_matrix/client/unstable/org.matrix.msc3575/sync}
            backend:
              service:
                name: matrix-synapse
                port:
                  name: slidingsync
            pathType: Prefix
          - path: /.well-known/matrix
            backend:
              service:
                name: matrix-synapse
                port:
                  name: well-known
            pathType: Prefix
          - path: /_synapse
            backend:
              service:
                name: matrix-synapse
                port:
                  name: http
            pathType: Prefix
          - path: /_matrix
            backend:
              service:
                name: matrix-synapse
                port:
                  name: http
            pathType: Prefix
